Fixed: Overflow of Mobile Nav

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -21,6 +21,10 @@ $colors-map: (
 	}
 }
 
+body {
+	overflow: hidden;
+}
+
 * {
 	box-sizing: border-box;
 	padding: 0;
